tests/smt2/error/minimized5.smt2
(declare-sort U)
(declare-const a U)
(declare-const b U)
(check-sat-assuming ((= a b)))
(get-unsat-core)
(pop)
